<resources>
    <string name="app_name">NerdLab</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_first">NerdLab</string>

    <string name="title_section1">主页</string>
    <string name="title_section2">校园活动</string>
    <string name="title_section3">社团活动</string>
    <string name="title_section4">个人活动</string>
    <string name="title_section5">其他</string>

    <string name="title_activity_fullscreen">NerdLab</string>
    <string name="dummy_content">Nerd\nLab</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_drawer">NerdLab</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>



    <string name="fbm_item1">search activity</string>
    <string name="fbm_item2">post</string>
    <string name="navItem1">navItem1</string>
    <string name="navItem2">navItem2</string>
    <string name="navItem3">navItem3</string>
    <string name="navItem4">navItem4</string>

    <string name="title_activity_text_tab">text_tab</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    
      <!--weibo project-->
      <!-- 全局文字 -->
      <string name="hello">Hello World!</string>
      <!--<string name="app_name">demos</string>-->
      <string name="app_version">v1.0</string>
      <!-- 按钮文字 -->
      <string name="btn_confirm">确认</string>
      <string name="btn_cancel">取消</string>
      <string name="btn_comment">写评论</string>
      <string name="btn_addfans">加关注</string>
      <!-- 菜单文字 -->
      <string name="menu_app_write">写微博</string>
      <string name="menu_app_logout">注销账户</string>
      <string name="menu_app_about">应用信息</string>
      <string name="menu_demo_web">网页示例</string>
      <string name="menu_demo_map">地图示例</string>
      <string name="menu_demo_test">测试示例</string>
      <!-- 配置提示 -->
      <string name="config_sign">修改签名</string>
      <string name="config_face">更换头像</string>
      <!-- 提示文字 -->
      <string name="msg_loginfail">登录失败</string>
      <!-- 界面文字 -->
      <string name="login_title">用户登录</string>
      <string name="login_username">账户</string>
      <string name="login_password">密码</string>
      <string name="login_remember">记住密码</string>
      <string name="login_submit">登录</string>
      <string name="edit_submit">保存</string>
      <string name="blog_comment">评论</string>
      <string name="customer_fans">粉丝</string>
      <string name="customer_blog">微博</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--weibo project done-->

    <string name="to_dialog_button">open dialog</string>
    <string name="action_name_editText">活动名称</string>
    <string name="action_content_editText">活动内容介绍....</string>
    <string name="action_place_editText">活动地点</string>
    <string name="action_time_editText">活动时间</string>
    <string name="action_date_editText">年    月     日</string>
    <string name="distribute_button">发  布</string>
    <string name="return_button">返回</string>
</resources>
